[gd_scene load_steps=15 format=2]

[ext_resource path="res://Materiais/Imagens/news imagens/mapa_imperatriz.jpeg" type="Texture" id=1]
[ext_resource path="res://Cenas/Epoca.gd" type="Script" id=2]
[ext_resource path="res://Cenas/grajau0-1.tscn" type="PackedScene" id=3]
[ext_resource path="res://Cenas/player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Cenas/direcao.tscn" type="PackedScene" id=5]
[ext_resource path="res://Materiais/Botões/botãoAoClicar.png" type="Texture" id=6]
[ext_resource path="res://Materiais/Botões/BotaoClique.png" type="Texture" id=7]
[ext_resource path="res://Materiais/Botões/botão.png" type="Texture" id=8]
[ext_resource path="res://Materiais/Sons/MusicaDuranteAsTelas.mp3" type="AudioStream" id=9]
[ext_resource path="res://Materiais/fonts/BRITANIC.TTF" type="DynamicFontData" id=10]
[ext_resource path="res://Materiais/fonts/vademecum.ttf" type="DynamicFontData" id=11]

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=3]
size = 35
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 11 )

[node name="Epocas" type="Sprite"]
position = Vector2( 1, 1 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
centered = false
script = ExtResource( 2 )

[node name="Dica1" type="TextureButton" parent="."]
margin_left = 386.0
margin_top = 178.0
margin_right = 574.0
margin_bottom = 460.0
expand = true

[node name="Dica2" type="TextureButton" parent="."]
margin_left = 102.0
margin_top = 400.0
margin_right = 362.0
margin_bottom = 606.0
expand = true

[node name="Dica3" type="TextureButton" parent="."]
margin_left = 374.0
margin_top = 572.0
margin_right = 684.0
margin_bottom = 784.0
expand = true

[node name="Cazumbar" type="TextureButton" parent="."]
margin_left = 60.0
margin_top = 10.0
margin_right = 360.0
margin_bottom = 100.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )
expand = true

[node name="Label" type="Label" parent="Cazumbar"]
margin_left = 2.0
margin_top = 10.0
margin_right = 292.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Voltar" type="TextureButton" parent="."]
margin_left = 400.0
margin_top = 10.0
margin_right = 700.0
margin_bottom = 100.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )
expand = true

[node name="Label2" type="Label" parent="Voltar"]
margin_left = 2.0
margin_top = 10.0
margin_right = 292.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 3 )
text = "voltr"
align = 1
valign = 1

[node name="Label3" type="Label" parent="."]
margin_left = 40.0
margin_top = 180.0
margin_right = 264.0
margin_bottom = 241.0
custom_fonts/font = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]

[node name="tela_dica" parent="." instance=ExtResource( 3 )]
visible = false

[node name="player" parent="." instance=ExtResource( 4 )]
position = Vector2( 128, 1028 )

[node name="direcao" parent="." instance=ExtResource( 5 )]
position = Vector2( 214, 152 )
scale = Vector2( 2, 2 )

[node name="Label" type="Label" parent="."]
margin_left = 54.0
margin_top = 434.0
margin_right = 100.0
margin_bottom = 448.0

[node name="contnuacao" type="TextureButton" parent="."]
visible = false
margin_left = 98.0
margin_top = 848.0
margin_right = 630.0
margin_bottom = 1284.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[connection signal="pressed" from="Dica1" to="." method="_on_Dica1_pressed"]
[connection signal="pressed" from="Dica2" to="." method="_on_Dica2_pressed"]
[connection signal="pressed" from="Dica3" to="." method="_on_Dica3_pressed"]
[connection signal="pressed" from="Cazumbar" to="." method="_on_Cazumbar_pressed"]
[connection signal="pressed" from="Voltar" to="." method="_on_Voltar_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="contnuacao" to="." method="_on_contnuacao_pressed"]
